# ib-services

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOFF.md  README.md  build_doc.py  build_phase1.py  build_reqs.py  build_script.py  docker-compose.yml  pyproject.toml
.github/workflows/: publish-image.yml
bot/: __init__.py  admin_bot.py  admin_reminders.py  bot.py  broadcasts.py  channel.py  content.py  fetch.py  funnel.json  links.py  media.py  payments.py  preview.py  reminders.py  render.py  routing.py  webhook.py
db/: schema.sql
docs/: ai-analyst.md  bot.md  deploy.md  instagram-token-runbook.md  metabase.md  migrations.md  operations.md  relay.md
docs/connectors/: tiktok-access.md  tiktok-capture.user.js  vk-access.md  yt-oauth-bootstrap.py
docs/superpowers/plans/: 2026-06-25-foundation-contract.md  (+4 more)
kontur/: api.py  automation.py  cli.py  config.py  db.py  funnel_repair.py  ingest.py  models.py  webhooks.py
kontur/ai/: __init__.py  analyst.py  digest.py  llm.py  prompts.py  telegram.py
kontur/connectors/: base.py  http.py  oauth.py  utm.py
kontur/dashboard/: __init__.py  catalog.py  metabase.py  social_catalog.py  views.py
ops/: Dockerfile.app-overlay  backup.sh  deploy.sh  kontur-ai-mentor.service  kontur-ai-mentor.timer  kontur-backup.service  kontur-backup.timer  kontur-sync.service  kontur-sync.timer
ops/nginx/: kontur-limits.conf  slapychev-stack.conf
tests/: funnel_seed.py  instagram_fake.py  test_admin_reminders.py  test_ai_analyst.py  test_ai_cli.py  test_ai_digest.py  test_ai_prompts.py  test_ai_telegram.py  test_automation.py  test_base_connector.py  test_bot_autodelete.py  test_bot_broadcasts.py  test_bot_content.py  test_bot_events.py  test_bot_media.py  test_bot_payments.py  test_bot_reminders.py  test_bot_routing.py  test_client.py  test_config_instagram.py  test_config_telegram.py  test_config_youtube.py  test_content_metric.py  test_dashboard.py  test_deploy_contract.py  test_funnel_repair.py  test_http_client.py  test_ingest.py  test_instagram_cli.py  test_instagram_client.py  test_instagram_client_insights.py  test_instagram_mapping.py  test_instagram_proxy.py  test_instagram_refresh.py  test_instagram_sync.py  test_instagram_token.py  test_mapping.py  test_metabase.py  test_oauth_load.py  test_oauth_token.py  (+26 more)
(+26 files in other folders)
